--- a/aoc2022.cabal
+++ b/aoc2022.cabal
@@ -29,6 +29,6 @@ executable aoc2022
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.16.3.0
+    build-depends:    base, split
     hs-source-dirs:   app
     default-language: Haskell2010
