--- a/aoc2022.cabal
+++ b/aoc2022.cabal
@@ -25,7 +25,7 @@ executable aoc2022
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:    ParseLetters
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
